maze.lessons.maze.island.IslandMaze.scala.error
Escaper:18: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime38.Escaper'
override def run() {
             ^